tests/baselines/reference/parserMethodSignature4(strict=true).errors.txt
parserMethodSignature4.ts(2,3): error TS7010: 'D', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserMethodSignature4.ts (1 errors) ====
    interface I {
      D?<T>();
      ~~~~~~~~
!!! error TS7010: 'D', which lacks return-type annotation, implicitly has an 'any' return type.
    }